Date	Added

2010/12/10
	* Rev. 14572 Applied update to charhelp.txt provided by EvilPuncker to match current charcommand behavior (bugreport:4632, follow up to r13403). [Ai4rei]
2010/10/10
	* Added cashfood_use_interval config setting. [Paradox924X]
2010/05/25
	* Rev. 14307 Added noteleport flag to nyd_dun02. [L0ne_W0lf]
2009/11/03
	* Rev. 14123 Added mapflags for WoESE guild dungeon. [L0ne_W0lf]
2009/10/18
	* Removed char_rename config setting, now hardcoded [ultramage]
2009/10/15
	* Rev. 14092 Added several 13.x and 12.1 map mapflags, might have missed some. [L0ne_w0lf]
2009/08/18
	* Rev. 14013 Just a conf update, and mapflags! [L0ne_W0lf]
	* Changed attribute_recover to no, being hit by the same element should not recover HP.
	* Added monster_noteleport to Okolnir quest maps. Will fix the tarot card issue.
2009/04/10
	* Rev. 13668 Inverted the way monster_ai 0x200 works, default is 0 again. [ultramage]
	* Rev. 13667 Default value for monster_ai is now 0x200. [L0ne_W0lf]
2009/04/02
	* Uncommented pvp_room in maps_athena.conf [Playtester]
2009/04/01
	* Removed online_check config options. [FlavioJS]
	* Clarified char_maintenance config option.
2009/03/31
	* Added missing pet_equip_min_friendly config option [ultramage]
2009/03/23
	* Added setting display_status_timers to client.conf for new status change packet. [Sara]
2009/01/26
	* Rev. 13494 Changed guild_skill_relog_delay to yes. Relogging no longer resets delay on guild skills. [L0ne_W0lf]
2009/01/12
	* Second agitend corrected to agitend2 [SketchyPhoenix]
2009/01/05
	* Added @charcommands to return a list of available # commands [SketchyPhoenix]
2008/12/26
	* Rev. 13444 Marked new Morroc fields as nomemo. [L0ne_W0lf]
	* Rev. 13415 Commented out maps no longer accessable with 12.1. [L0ne_W0lf]
2008/12/17
	* Rev. 13405 Added additional maps to maps_athena.conf. [L0ne_W0lf]
2008/11/04
	* Updated: added info about latest packet_ver flag in client.conf (bugreport:2415) [akrus]
2008/10/06