@@ -44,7 +44,7 @@ hvan_explosion_intimate: 45000
 // Show stat growth to the owner when an Homunculus levels up
 homunculus_show_growth: no
 
-// If a monster is killed only by homunculus, can autoloot works?
+// Does autoloot work, when a monster is killed by homunculus only?
 homunculus_autoloot: yes
 
 // Should homunculii Vaporize when Master dies?
